kavita/kavita-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: kavita
  name: kavita
  namespace: kavita
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kavita
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kavita
    spec:
      containers:
        - env:
            - name: DOTNET_SYSTEM_GLOBALIZATION_INVARIANT
              value: "true"
            - name: TZ
              value: America/Chicago
          image: ghcr.io/kareadita/kavita:latest
          name: kavita
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /manga
              name: manga
            - mountPath: /comics
              name: comics
            - mountPath: /books
              name: books
            - mountPath: /kavita/config
              name: config
      restartPolicy: Always
      volumes:
        - name: manga
          persistentVolumeClaim:
            claimName: manga
        - name: comics
          persistentVolumeClaim:
            claimName: comics
        - name: books
          persistentVolumeClaim:
            claimName: books
        - name: config
          persistentVolumeClaim:
            claimName: config
