kavita/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita
  namespace: kavita
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  defaultBackend:
    service:
      name: kavita
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - books
